<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">LinkApp</string>
    <string name="action_settings">Settings</string>
    <string name="test_option">Option</string>
    <string name="image_desc_logo">Logo</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main_menu" translatable="false">MainMenuActivity</string>
    <string name="title_activity_unit_converter">Unit Converter</string>
    <string name="select_unit">Select Unit</string>
    <string name="creator" translatable="false">Theo</string>
    <string name="category">Category</string>
    <string name="image_desc_copy">Copy Button</string>
    <string name="image_desc_paste">Paste Button</string>
    <string name="convert">Convert!</string>
    <string name="exit_messege">Press one more time to exit.</string>
</resources>
