<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.gmail.krawiec.teodor.linkapp.UnitConverter">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_unit_converter"
        android:id="@+id/textView"
        android:textSize="@dimen/main_font_size"
        android:layout_centerHorizontal="true"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/textView"
        android:id="@+id/LinearLayout1">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_unit"
            android:id="@+id/button1"
            android:layout_weight="2"
            android:onClick="change1Unit"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:id="@+id/editText1"
            android:layout_weight="2"/>
        <ImageView
            android:contentDescription="@string/image_desc_paste"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/imageView1"
            android:layout_weight="3"
            android:src="@drawable/ic_action_paste"
            android:clickable="true"
            android:onClick="pasteData"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/LinearLayout1"
        android:id="@+id/LinearLayout2">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_unit"
            android:id="@+id/button2"
            android:layout_weight="2"
            android:onClick="change2Unit"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:id="@+id/editText2"
            android:layout_weight="2"/>
        <ImageView
            android:contentDescription="@string/image_desc_copy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/imageView2"
            android:layout_weight="3"
            android:src="@drawable/ic_action_copy"
            android:clickable="true"
            android:onClick="copyData"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/LinearLayout2"
        android:id="@+id/LinearLayout3">
        <Button
            style="?android:attr/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:id="@+id/button4"
            android:layout_weight="1"
            android:onClick="changeCategory"/>
        <Button
            style="?android:attr/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/convert"
            android:id="@+id/button3"
            android:layout_weight="1"
            android:onClick="count"/>
    </LinearLayout>
</RelativeLayout>
